--- a/src/main/resources/templates/admin/product/delete.html
+++ b/src/main/resources/templates/admin/product/delete.html
@@ -21,8 +21,10 @@
 
         <form method="post" style="display: inline;">
             <input type="hidden" name="productId" th:value="${product.id}">
-            <button type="submit" class="btn btn-primary" style="background-color: #FF4D4D; border-color: #FF4D4D; min-width: 70px;"
-                    onmouseover="this.style.backgroundColor='#FF2929';" onmouseout="this.style.backgroundColor='#FF4D4D';">
+            <button type="submit" class="btn btn-primary"
+                    style="background-color: #FF4D4D; border-color: #FF4D4D; min-width: 70px;"
+                    onmouseover="this.style.backgroundColor='#FF2929';"
+                    onmouseout="this.style.backgroundColor='#FF4D4D';">
                 Sil</button>
         </form>
     </div>
