--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{layout}"
-        lang="en">
+<html lang="en">
 
 <head>
     <title>FusionTech - 404</title>
 </head>
 
-<body>
-
-<section layout:fragment="content">
-
-
-
-</section>
-
+<body style="background-color: #f0f0f0; margin: 0; padding: 0;">
+<div style="display: flex; align-items: center; justify-content: center;
+         font-family: Arial, sans-serif; height: 100vh;">
+    <div style="text-align: center; padding: 100px 30px;
+             background-color: #FFD333;">
+        <h1 style="font-size: 3rem; color: #333;">Səhifə tapılmadı...</h1>
+        <p style="font-size: 1.2rem; color: #666;">Sorğunuzu yoxlayın və ya əsas səhifəyə qayıdın</p>
+        <a href="/" style="font-size: 1rem; color: #007BFF;">Əsas səhifəyə geri dön</a>
+    </div>
+</div>
 </body>
 </html>
