--- a/src/main/resources/static/admin/css/addImagesUpdate.css
+++ b/src/main/resources/static/admin/css/addImagesUpdate.css
@@ -1,4 +1,4 @@
-#imagePreviewContainer {
+#imagePreviewContainerUpdate {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -16,8 +16,8 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
-    object-fit: cover;
-    aspect-ratio: 1;
+    object-fit: cover; /* Şəkilin ölçüsünü konteynerə uyğunlaşdırmaq */
+    aspect-ratio: 1; /* Şəkil kvadrat ölçüdə olsun */
 }
 
 .delete-btn {
