--- a/src/main/resources/templates/admin/category/index.html
+++ b/src/main/resources/templates/admin/category/index.html
@@ -12,25 +12,30 @@
 
 <section layout:fragment="content">
 
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Kateqoriya adı</th>
-            <th scope="col">Seçimlər</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="category : ${categories}">
-            <td th:text="${category.id}" scope="row" style="vertical-align: middle;">1</td>
-            <td th:text="${category.name}" style="vertical-align: middle;">Name</td>
-            <td style="vertical-align: middle;">
-                <a th:href="'/admin/category/update/' + ${category.id}" class="btn btn-primary py-1 px-2">Yenilə</a>
-                <a th:href="'/admin/category/delete/' + ${category.id}" class="btn btn-primary py-1 px-2">Sil</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div style="margin-right: 700px; margin-left: 40px;">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Kateqoriya adı</th>
+                <th scope="col">Seçimlər</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="category : ${categories}">
+                <td th:text="${category.id}" scope="row" style="vertical-align: middle;">1</td>
+                <td th:text="${category.name}" style="vertical-align: middle;">Name</td>
+                <td style="vertical-align: middle; display: flex; gap: 4px;">
+                    <a th:href="'/admin/category/update/' + ${category.id}" class="btn btn-primary py-1 px-2">Yenilə</a>
+                    <a th:href="'/admin/category/delete/' + ${category.id}" class="btn btn-primary py-1 px-2"
+                       style="background-color: #FF4D4D; border-color: #FF4D4D;"
+                       onmouseover="this.style.backgroundColor='#FF2929';"
+                       onmouseout="this.style.backgroundColor='#FF4D4D';">Sil</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
     <a style="color: #228B22; font-weight: bold; text-decoration: none; display: inline-flex; align-items: center; margin-left: 40px; margin-top: 25px; transition: color 0.3s ease; font-size: 18px;"
        href="/admin/category/create" onmouseover="this.style.color='#4CAF50'" onmouseout="this.style.color='#228B22'">
