--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -34,6 +34,7 @@
 
     <!-- Dynamic inputs for adding images -->
     <link href="/admin/css/addImagesCreate.css" rel="stylesheet">
+    <link href="/admin/css/addImagesUpdate.css" rel="stylesheet">
 
 </head>
 
