--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -297,11 +297,15 @@
     </div>
 </div>
 
-<!-- Dynamic inputs for adding subcategories -->
-<script src="/admin/js/addSCategoryUpdate.js"></script>
-<script src="/admin/js/addSCategoryCreate.js"></script>
+<!-- Image input for slider pages -->
+<script src="/admin/js/sliderCreate.js"></script>
+<script src="/admin/js/sliderUpdate.js"></script>
 
-<!-- Dynamic inputs for adding images -->
+<!-- Dynamic subcat and image inputs for category pages -->
+<script src="/admin/js/categoryCreate.js"></script>
+<script src="/admin/js/categoryUpdate.js"></script>
+
+<!-- Dynamic inputs for adding product images -->
 <script src="/admin/js/addImagesUpdate.js"></script>
 <script src="/admin/js/addImagesCreate.js"></script>
 
