--- a/src/main/resources/templates/admin/category/update.html
+++ b/src/main/resources/templates/admin/category/update.html
@@ -12,34 +12,71 @@
 
 <section layout:fragment="content">
 
-    <form method="post" onsubmit="return validateAndSubmitFormUpdate()" style="margin-left: 50px;">
-        <div style="margin: 10px 0;">
-            <input type="text" name="name" th:value="${category.name}" placeholder="Kateqoriyanın adı" required
-                   style="width: 400px; height: 40px; padding: 10px; outline: none;
-                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="text" name="image" th:value="${category.image}" placeholder="Kateqoriyanın şəkli" required
-                   style="width: 400px; height: 40px; padding: 10px; outline: none;
-                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
-        </div>
+    <form method="post" onsubmit="return validateAndSubmitFormUpdate()"
+          style="margin-left: 70px; margin-right: 70px;" enctype="multipart/form-data">
+        <div style="display: flex; justify-content: space-between;">
+            <!-- Sol sütun -->
+            <div style="flex: 1; margin-right: 60px;">
+                <div style="margin: 10px 0;">
+                    <input type="text" name="name" th:value="${category.name}" placeholder="Kateqoriyanın adı" required
+                           style="width: 100%; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                </div>
 
-        <!-- Dinamik alt kateqoriya inputları -->
-        <div id="subcategoriesContainer" style="margin: 10px 0; margin-top: 20px;">
-            <label for="subcategories" style="display: block; margin-bottom: 1px;">Alt kateqoriyalar:</label>
-            <div th:each="subcategory, iterStat : ${category.subcategories}"
-                 style="margin-bottom: 10px; display: flex; align-items: center;">
-                <input th:value="${subcategory.subcategoryName.name}" type="text" name="subcategoriesName"
-                       placeholder="Alt kateqoriyanın adını yaz" id="subcategories" required
-                       style="width: 400px; height: 40px; padding: 10px; outline: none;
-                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
-                <button type="button" onclick="removeSubcategoryUpdate(this)" class="btn btn-primary py-1 px-2"
-                        style="margin-left: 5px;">Ləğv et</button>
+                <!-- Dinamik alt kateqoriya inputları -->
+                <div id="SubcategoriesContainer" style="margin: 10px 0; margin-top: 20px; margin-bottom: 10px;">
+                    <label for="subcategories" style="display: block; margin-bottom: 1px;">Alt kateqoriyalar:</label>
+                    <div th:each="subcategory, iterStat : ${category.subcategories}"
+                         style="display: flex; align-items: center; margin-bottom: 10px;">
+                        <input th:value="${subcategory.subcategoryName.name}" type="text" name="subcategoriesName"
+                               placeholder="Alt kateqoriyanın adını yaz" id="subcategories" required
+                               style="width: 100%; height: 40px; padding: 10px; outline: none;
+                       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border: 1px solid #ccc; border-radius: 5px;">
+                        <button type="button" onclick="removeSubcategoryUpdate(this)" class="btn btn-primary py-1 px-2"
+                                style="margin-left: 5px; background-color: #FF4D4D; border-color: #FF4D4D;"
+                                onmouseover="this.style.backgroundColor='#FF2929';"
+                                onmouseout="this.style.backgroundColor='#FF4D4D';">Sil</button>
+                    </div>
+                </div>
+                <button type="button" onclick="addSubcategoryUpdate()" class="btn btn-primary py-1 px-2" style="margin-bottom: 10px;">+ Əlavə et</button>
+            </div>
+            <!-- Sağ sütun -->
+            <div style="flex: 1;">
+                <div style="margin: 10px 0;">
+                    <!-- Şəkil önizləmə qutusu -->
+                    <div id="imagePreviewContainerCatUp"
+                         style="border: 1px dashed #ccc; border-radius: 5px; width: 250px; height: 250px;
+                     display: flex; align-items: center; justify-content: center; position: relative; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+                        <img id="imagePreviewCatUp" th:src="${category.imageUrl}" alt="Preview"
+                             style="display: block; width: 100%; height: 100%; border-radius: 5px; object-fit: cover;">
+                        <button type="button" id="uploadImageButtonCatUp" onclick="document.getElementById('imageInputCatUp').click()"
+                                style="display: none; width: 80px; height: 80px; border: none; cursor: pointer; font-size: 14px;
+                        color: #007bff; display: flex; flex-direction: column; align-items: center; justify-content: center;
+                        transition: color 0.3s; outline: none; background: none; gap: 0px;"
+                                onmouseover="this.style.color='#0056b3';"
+                                onmouseout="this.style.color='#007bff';">
+                            <span style="font-size: 70px; line-height: 0.8; vertical-align: middle; margin-top: -9px;">+</span>
+                            <span>Şəkil Yüklə</span>
+                        </button>
+                        <button type="button" id="removeImageButtonCatUp" onclick="removeImageCatUp()"
+                                style="display: block; position: absolute; top: 10px; right: 10px; background-color: #f00;
+                            color: #fff; border: none; border-radius: 50%; width: 24px; height: 24px; cursor: pointer;">
+                            ×
+                        </button>
+                    </div>
+                    <input type="file" id="imageInputCatUp" name="image" accept="image/*" style="display: none;"
+                           onchange="handleImageUploadCatUp(this)">
+                    <!-- Köhnə şəkil URL-ni saxlayan gizli input -->
+                    <input type="hidden" id="imageUrlHiddenCatUp" name="imageUrl" th:value="${category.imageUrl}">
+                    <div id="imageErrorCatUp" style="color: red; font-size: 14px; margin-top: 5px; display: none;">Şəkil
+                        yükləyin!
+                    </div>
+                </div>
             </div>
         </div>
-        <button type="button" onclick="addSubcategoryUpdate()" class="btn btn-primary py-1 px-2" style="margin-bottom: 10px;">+ Əlavə et</button>
 
-        <div style="margin: 10px 0; margin-top: 30px;">
+        <!-- Saxla düyməsi -->
+        <div style="margin: 10px 0; margin-top: 40px; margin-right: 40px; text-align: center;">
             <input type="submit" value="Saxla" class="btn btn-primary py-2 px-4"
                    style="color: #3D464D; background-color: #FFD333; border-color: #FFD333;"
                    onmouseover="this.style.backgroundColor='#FFC107'; this.style.borderColor='#FFC107';"
