--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
                     <div class="carousel-inner">
                         <div th:each="slider : ${sliders}"  th:attr="class=${slider.id == 1 ? 'carousel-item position-relative active' : 'carousel-item position-relative '}"
                              style="height: 430px;">
-                            <img class="position-absolute w-100 h-100" th:src="${slider.image}"
+                            <img class="position-absolute w-100 h-100" th:src="${slider.imageUrl}"
                                  style="object-fit: cover;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
